--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -545,6 +545,12 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
+  .right-4 {
+    right: calc(var(--spacing) * 4);
+  }
   .left-11 {
     left: calc(var(--spacing) * 11);
   }
@@ -620,6 +626,15 @@
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
+  .h-\[60ppx\] {
+    height: 60ppx;
+  }
+  .h-\[60px\] {
+    height: 60px;
+  }
+  .h-\[600px\] {
+    height: 600px;
+  }
   .h-full {
     height: 100%;
   }
@@ -635,11 +650,20 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-1\/3 {
+    width: calc(1/3 * 100%);
+  }
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
   .w-\[6\] {
     width: 6;
+  }
+  .w-\[19\%\] {
+    width: 19%;
+  }
+  .w-\[19\%\^\] {
+    width: 19%^;
   }
   .w-\[32\%\] {
     width: 32%;
@@ -682,6 +706,15 @@
   }
   .w-\[68\] {
     width: 68;
+  }
+  .w-\[81\%\] {
+    width: 81%;
+  }
+  .w-\[81\] {
+    width: 81;
+  }
+  .w-\[223px\] {
+    width: 223px;
   }
   .w-fit {
     width: fit-content;
@@ -805,8 +838,14 @@
   .gap-24 {
     gap: calc(var(--spacing) * 24);
   }
+  .gap-\[30px\] {
+    gap: 30px;
+  }
   .gap-\[45px\] {
     gap: 45px;
+  }
+  .gap-\[50px\] {
+    gap: 50px;
   }
   .gap-\[60px\] {
     gap: 60px;
@@ -869,6 +908,9 @@
   .bg-\[\#007EC2\] {
     background-color: #007EC2;
   }
+  .bg-\[\#007EC2a\] {
+    background-color: #007EC2a;
+  }
   .bg-\[\#007EC22B\] {
     background-color: #007EC22B;
   }
@@ -891,8 +933,28 @@
     --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-\[linear-gradient\(102\.33deg\,_rgba\(255\,255\,255\,0\.3\)_-23\.19\%\,_rgba\(155\,227\,219\,0\.3\)_40\.09\%\,_rgba\(111\,187\,218\,0\.3\)_95\.66\%\)\] {
+    background-image: linear-gradient(102.33deg, rgba(255,255,255,0.3) -23.19%, rgba(155,227,219,0.3) 40.09%, rgba(111,187,218,0.3) 95.66%);
+  }
   .from-\[\#F2F5F8\] {
     --tw-gradient-from: #F2F5F8;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-white {
+    --tw-gradient-from: var(--color-white);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-white\/30 {
+    --tw-gradient-from: color-mix(in oklab, var(--color-white) 30%, transparent);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .via-\[\#9BE3DB\]\/30 {
+    --tw-gradient-via: color-mix(in oklab, #9BE3DB 30%, transparent);
+    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-via-stops);
+  }
+  .to-\[\#6FBBDA\]\/30 {
+    --tw-gradient-to: color-mix(in oklab, #6FBBDA 30%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-\[\#E4F7F5\] {
@@ -920,6 +982,9 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
+  .px-25 {
+    padding-inline: calc(var(--spacing) * 25);
+  }
   .px-\[30px\] {
     padding-inline: 30px;
   }
@@ -932,11 +997,17 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
+  }
+  .py-9 {
+    padding-block: calc(var(--spacing) * 9);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
@@ -972,6 +1043,9 @@
   .text-\[17px\] {
     font-size: 17px;
   }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
   .leading-0 {
     --tw-leading: calc(var(--spacing) * 0);
     line-height: calc(var(--spacing) * 0);
@@ -987,6 +1061,10 @@
   .leading-\[20\.4px\] {
     --tw-leading: 20.4px;
     line-height: 20.4px;
+  }
+  .leading-\[21\.6px\] {
+    --tw-leading: 21.6px;
+    line-height: 21.6px;
   }
   .leading-\[24px\] {
     --tw-leading: 24px;
@@ -1007,6 +1085,9 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-\[\#FF1F1F\] {
+    color: #FF1F1F;
   }
   .text-white {
     color: var(--color-white);
@@ -1030,6 +1111,10 @@
   }
   .shadow-\[0px_0px_20px_0px_\#0000001A\] {
     --tw-shadow: 0px 0px 20px 0px var(--tw-shadow-color, #0000001A);
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .shadow-\[0px_0px_20px_0px_\#00000017\] {
+    --tw-shadow: 0px 0px 20px 0px var(--tw-shadow-color, #00000017);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-\[0px_0px_\] {
