--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -626,6 +626,9 @@
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
+  .h-11 {
+    height: calc(var(--spacing) * 11);
+  }
   .h-\[60ppx\] {
     height: 60ppx;
   }
@@ -655,6 +658,9 @@
   }
   .w-4 {
     width: calc(var(--spacing) * 4);
+  }
+  .w-11 {
+    width: calc(var(--spacing) * 11);
   }
   .w-\[6\] {
     width: 6;
