--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -838,6 +838,9 @@
   .gap-7 {
     gap: calc(var(--spacing) * 7);
   }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
   .gap-11 {
     gap: calc(var(--spacing) * 11);
   }
