--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -551,8 +551,14 @@
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .left-11 {
     left: calc(var(--spacing) * 11);
+  }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
   }
   .container {
     width: 100%;
@@ -572,9 +578,6 @@
       max-width: 96rem;
     }
   }
-  .m-5 {
-    margin: calc(var(--spacing) * 5);
-  }
   .mx-auto {
     margin-inline: auto;
   }
@@ -587,20 +590,11 @@
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
-  .mt-4 {
-    margin-top: calc(var(--spacing) * 4);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
-  }
   .mt-\[2px\] {
     margin-top: 2px;
   }
   .mt-auto {
     margin-top: auto;
-  }
-  .\!mr-7 {
-    margin-right: calc(var(--spacing) * 7) !important;
   }
   .block {
     display: block;
@@ -629,11 +623,8 @@
   .h-11 {
     height: calc(var(--spacing) * 11);
   }
-  .h-\[60ppx\] {
-    height: 60ppx;
-  }
-  .h-\[60px\] {
-    height: 60px;
+  .h-\[34px\] {
+    height: 34px;
   }
   .h-\[600px\] {
     height: 600px;
@@ -650,9 +641,6 @@
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
   .w-1\/3 {
     width: calc(1/3 * 100%);
   }
@@ -662,20 +650,14 @@
   .w-11 {
     width: calc(var(--spacing) * 11);
   }
-  .w-\[6\] {
-    width: 6;
-  }
   .w-\[19\%\] {
     width: 19%;
-  }
-  .w-\[19\%\^\] {
-    width: 19%^;
   }
   .w-\[32\%\] {
     width: 32%;
   }
-  .w-\[42\%\] {
-    width: 42%;
+  .w-\[34px\] {
+    width: 34px;
   }
   .w-\[44\%\] {
     width: 44%;
@@ -683,44 +665,17 @@
   .w-\[45\%\] {
     width: 45%;
   }
-  .w-\[48\%\] {
-    width: 48%;
-  }
-  .w-\[52\%\] {
-    width: 52%;
-  }
-  .w-\[52\] {
-    width: 52;
-  }
-  .w-\[54\%\] {
-    width: 54%;
-  }
   .w-\[55\%\] {
     width: 55%;
   }
   .w-\[56\%\] {
     width: 56%;
   }
-  .w-\[58\%\] {
-    width: 58%;
-  }
-  .w-\[58\] {
-    width: 58;
-  }
   .w-\[68\%\] {
     width: 68%;
   }
-  .w-\[68\] {
-    width: 68;
-  }
   .w-\[81\%\] {
     width: 81%;
-  }
-  .w-\[81\] {
-    width: 81;
-  }
-  .w-\[223px\] {
-    width: 223px;
   }
   .w-fit {
     width: fit-content;
@@ -760,12 +715,6 @@
   .rotate-45 {
     rotate: 45deg;
   }
-  .rotate-90 {
-    rotate: 90deg;
-  }
-  .rotate-180 {
-    rotate: 180deg;
-  }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
@@ -775,26 +724,14 @@
   .resize {
     resize: both;
   }
-  .list-inside {
-    list-style-position: inside;
-  }
-  .list-image-\[url\(\)\] {
-    list-style-image: url();
-  }
-  .list-image-\[url\(\.\.\/Assets\/Images\/\)\] {
-    list-style-image: url(../Assets/Images/);
-  }
-  .list-image-\[url\(\.\.\/Assets\/Images\/icons\/check\.svg\)\] {
-    list-style-image: url(../Assets/Images/icons/check.svg);
-  }
-  .list-image-\[url\(\.\.\/Images\/icons\/check\.svg\)\] {
-    list-style-image: url(../Images/icons/check.svg);
-  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .grid-cols-\[52\%_48\%\] {
     grid-template-columns: 52% 48%;
@@ -807,9 +744,6 @@
   }
   .items-start {
     align-items: flex-start;
-  }
-  .items-stretch {
-    align-items: stretch;
   }
   .justify-between {
     justify-content: space-between;
@@ -838,20 +772,17 @@
   .gap-7 {
     gap: calc(var(--spacing) * 7);
   }
+  .gap-9 {
+    gap: calc(var(--spacing) * 9);
+  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
   .gap-11 {
     gap: calc(var(--spacing) * 11);
   }
-  .gap-24 {
-    gap: calc(var(--spacing) * 24);
-  }
   .gap-\[30px\] {
     gap: 30px;
-  }
-  .gap-\[45px\] {
-    gap: 45px;
   }
   .gap-\[50px\] {
     gap: 50px;
@@ -862,63 +793,57 @@
   .gap-\[93px\] {
     gap: 93px;
   }
+  .gap-\[123px\] {
+    gap: 123px;
+  }
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
-  }
-  .gap-x-10 {
-    column-gap: calc(var(--spacing) * 10);
-  }
-  .gap-x-16 {
-    column-gap: calc(var(--spacing) * 16);
-  }
-  .gap-x-20 {
-    column-gap: calc(var(--spacing) * 20);
-  }
-  .gap-x-22 {
-    column-gap: calc(var(--spacing) * 22);
-  }
-  .gap-x-24 {
-    column-gap: calc(var(--spacing) * 24);
-  }
-  .gap-y-3 {
-    row-gap: calc(var(--spacing) * 3);
   }
   .gap-y-4 {
     row-gap: calc(var(--spacing) * 4);
   }
-  .self-stretch {
-    align-self: stretch;
+  .gap-y-5 {
+    row-gap: calc(var(--spacing) * 5);
   }
-  .rounded-\[\#FFFFFF\] {
-    border-radius: #FFFFFF;
+  .self-end {
+    align-self: flex-end;
+  }
+  .overflow-hidden {
+    overflow: hidden;
   }
   .rounded-\[3px\] {
     border-radius: 3px;
   }
-  .rounded-\[9ox\] {
-    border-radius: 9ox;
-  }
   .rounded-\[9px\] {
     border-radius: 9px;
   }
+  .rounded-\[12px\] {
+    border-radius: 12px;
+  }
   .rounded-\[20px\] {
     border-radius: 20px;
+  }
+  .rounded-\[32px\] {
+    border-radius: 32px;
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-\[\#007EC2\] {
+    border-color: #007EC2;
+  }
   .border-\[\#111111\] {
     border-color: #111111;
   }
-  .border-\[\#\] {
-    border-color: #;
+  .border-white {
+    border-color: var(--color-white);
   }
   .bg-\[\#007EC2\] {
     background-color: #007EC2;
-  }
-  .bg-\[\#007EC2a\] {
-    background-color: #007EC2a;
   }
   .bg-\[\#007EC22B\] {
     background-color: #007EC22B;
@@ -929,8 +854,14 @@
   .bg-\[\#36C7B6\] {
     background-color: #36C7B6;
   }
+  .bg-\[\#36C7B61A\] {
+    background-color: #36C7B61A;
+  }
   .bg-\[\#E0E0E0\] {
     background-color: #E0E0E0;
+  }
+  .bg-\[\#F2F5F8\] {
+    background-color: #F2F5F8;
   }
   .bg-\[\#FF0066\] {
     background-color: #FF0066;
@@ -949,35 +880,12 @@
     --tw-gradient-from: #F2F5F8;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .from-white {
-    --tw-gradient-from: var(--color-white);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .from-white\/30 {
-    --tw-gradient-from: color-mix(in oklab, var(--color-white) 30%, transparent);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .via-\[\#9BE3DB\]\/30 {
-    --tw-gradient-via: color-mix(in oklab, #9BE3DB 30%, transparent);
-    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .to-\[\#6FBBDA\]\/30 {
-    --tw-gradient-to: color-mix(in oklab, #6FBBDA 30%, transparent);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .to-\[\#E4F7F5\] {
     --tw-gradient-to: #E4F7F5;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .object-cover {
-    object-fit: cover;
-  }
   .p-9 {
     padding: calc(var(--spacing) * 9);
-  }
-  .p-\[30px\] {
-    padding: 30px;
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -985,14 +893,14 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
+  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
-  }
-  .px-25 {
-    padding-inline: calc(var(--spacing) * 25);
   }
   .px-\[30px\] {
     padding-inline: 30px;
@@ -1018,14 +926,17 @@
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
   }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
   .py-\[30px\] {
     padding-block: 30px;
   }
   .pr-9 {
     padding-right: calc(var(--spacing) * 9);
+  }
+  .pr-\[58px\] {
+    padding-right: 58px;
+  }
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
   }
   .pl-\[456px\] {
     padding-left: 456px;
@@ -1046,6 +957,9 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[11px\] {
+    font-size: 11px;
+  }
   .text-\[15px\] {
     font-size: 15px;
   }
@@ -1055,9 +969,9 @@
   .text-\[18px\] {
     font-size: 18px;
   }
-  .leading-0 {
-    --tw-leading: calc(var(--spacing) * 0);
-    line-height: calc(var(--spacing) * 0);
+  .leading-\[13\.2px\] {
+    --tw-leading: 13.2px;
+    line-height: 13.2px;
   }
   .leading-\[18px\] {
     --tw-leading: 18px;
@@ -1107,15 +1021,8 @@
   .opacity-0 {
     opacity: 0%;
   }
-  .opacity-100 {
-    opacity: 100%;
-  }
   .shadow-\[0px_0px_10px_0px_\#0000001A\] {
     --tw-shadow: 0px 0px 10px 0px var(--tw-shadow-color, #0000001A);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[0px_0px_10px_0px_\] {
-    --tw-shadow: 0px 0px 10px 0px var(--tw-shadow-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-\[0px_0px_20px_0px_\#0000001A\] {
@@ -1124,14 +1031,6 @@
   }
   .shadow-\[0px_0px_20px_0px_\#00000017\] {
     --tw-shadow: 0px 0px 20px 0px var(--tw-shadow-color, #00000017);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[0px_0px_\] {
-    --tw-shadow: 0px 0px var(--tw-shadow-color, currentcolor);
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-\[0px_\] {
-    --tw-shadow: 0px;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .outline {
@@ -1147,59 +1046,9 @@
     --tw-duration: 500ms;
     transition-duration: 500ms;
   }
-  .group-checked\:opacity-0 {
-    &:is(:where(.group):checked *) {
-      opacity: 0%;
-    }
-  }
-  .group-checked\:opacity-100 {
-    &:is(:where(.group):checked *) {
-      opacity: 100%;
-    }
-  }
   .peer-checked\:opacity-100 {
     &:is(:where(.peer):checked ~ *) {
       opacity: 100%;
-    }
-  }
-  .marker\:\!mr-7 {
-    & *::marker {
-      margin-right: calc(var(--spacing) * 7) !important;
-    }
-    &::marker {
-      margin-right: calc(var(--spacing) * 7) !important;
-    }
-  }
-  .marker\:mr-7 {
-    & *::marker {
-      margin-right: calc(var(--spacing) * 7);
-    }
-    &::marker {
-      margin-right: calc(var(--spacing) * 7);
-    }
-  }
-  .marker\:block {
-    & *::marker {
-      display: block;
-    }
-    &::marker {
-      display: block;
-    }
-  }
-  .marker\:flex {
-    & *::marker {
-      display: flex;
-    }
-    &::marker {
-      display: flex;
-    }
-  }
-  .marker\:self-center {
-    & *::marker {
-      align-self: center;
-    }
-    &::marker {
-      align-self: center;
     }
   }
   .placeholder\:text-\[\#5E5E5E\] {
@@ -1207,23 +1056,16 @@
       color: #5E5E5E;
     }
   }
-  .placeholder\:text-\[\#\] {
-    &::placeholder {
-      color: #;
-    }
-  }
-  .hover\:opacity-0 {
-    &:hover {
-      @media (hover: hover) {
-        opacity: 0%;
-      }
-    }
-  }
 }
 .nunito {
   font-family: "Nunito", serif;
   font-optical-sizing: auto;
   font-style: normal;
+}
+.ui-tabs-active > a {
+  background: #36C7B6;
+  color: white;
+  border-radius: 32px;
 }
 @keyframes spin {
   to {
