--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -632,6 +632,12 @@
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-2\.5 {
+    margin-top: calc(var(--spacing) * 2.5);
+  }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
   }
@@ -972,6 +978,9 @@
   }
   .rounded-\[8px\] {
     border-radius: 8px;
+  }
+  .rounded-\[9opx\] {
+    border-radius: 9opx;
   }
   .rounded-\[9px\] {
     border-radius: 9px;
