--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -539,14 +539,29 @@
   .relative {
     position: relative;
   }
+  .inset-0 {
+    inset: calc(var(--spacing) * 0);
+  }
   .top-1 {
     top: calc(var(--spacing) * 1);
   }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-2 {
+    top: calc(var(--spacing) * 2);
+  }
+  .top-2\.5 {
+    top: calc(var(--spacing) * 2.5);
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
+  }
+  .right-2 {
+    right: calc(var(--spacing) * 2);
+  }
+  .right-2\.5 {
+    right: calc(var(--spacing) * 2.5);
   }
   .right-3 {
     right: calc(var(--spacing) * 3);
@@ -590,11 +605,26 @@
   .bottom-3\.5 {
     bottom: calc(var(--spacing) * 3.5);
   }
+  .left-1 {
+    left: calc(var(--spacing) * 1);
+  }
+  .left-1\/2 {
+    left: calc(1/2 * 100%);
+  }
   .left-11 {
     left: calc(var(--spacing) * 11);
   }
   .left-\[18px\] {
     left: 18px;
+  }
+  .z-\[2\] {
+    z-index: 2;
+  }
+  .z-\[3\] {
+    z-index: 3;
+  }
+  .z-\[4\] {
+    z-index: 4;
   }
   .col-span-2 {
     grid-column: span 2 / span 2;
@@ -646,6 +676,9 @@
   }
   .mt-auto {
     margin-top: auto;
+  }
+  .box-border {
+    box-sizing: border-box;
   }
   .block {
     display: block;
@@ -725,6 +758,9 @@
   .w-1 {
     width: calc(var(--spacing) * 1);
   }
+  .w-1\/2 {
+    width: calc(1/2 * 100%);
+  }
   .w-1\/3 {
     width: calc(1/3 * 100%);
   }
@@ -794,6 +830,9 @@
   .w-\[247px\] {
     width: 247px;
   }
+  .w-\[384px\] {
+    width: 384px;
+  }
   .w-fit {
     width: fit-content;
   }
@@ -806,8 +845,14 @@
   .max-w-\[150px\] {
     max-width: 150px;
   }
+  .max-w-\[155px\] {
+    max-width: 155px;
+  }
   .max-w-\[176px\] {
     max-width: 176px;
+  }
+  .max-w-\[290px\] {
+    max-width: 290px;
   }
   .max-w-\[529px\] {
     max-width: 529px;
@@ -830,12 +875,28 @@
   .border-collapse {
     border-collapse: collapse;
   }
+  .-translate-x-1 {
+    --tw-translate-x: calc(var(--spacing) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-x-1\/2 {
+    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
   .-translate-y-1 {
     --tw-translate-y: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[1000px\] {
+    --tw-translate-y: calc(1000px * -1);
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .-translate-y-\[2000px\] {
+    --tw-translate-y: calc(2000px * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .rotate-45 {
@@ -888,6 +949,9 @@
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
+  }
+  .gap-1\.5 {
+    gap: calc(var(--spacing) * 1.5);
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
@@ -997,6 +1061,9 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -1053,6 +1120,12 @@
   .bg-\[\#FF0066\] {
     background-color: #FF0066;
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
+  .bg-black\/30 {
+    background-color: color-mix(in oklab, var(--color-black) 30%, transparent);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -1080,6 +1153,9 @@
   .p-9 {
     padding: calc(var(--spacing) * 9);
   }
+  .p-\[30px\] {
+    padding: 30px;
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -1106,6 +1182,12 @@
   }
   .px-\[50px\] {
     padding-inline: 50px;
+  }
+  .py-1 {
+    padding-block: calc(var(--spacing) * 1);
+  }
+  .py-1\.5 {
+    padding-block: calc(var(--spacing) * 1.5);
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
@@ -1169,6 +1251,10 @@
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
+  }
   .text-sm {
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
@@ -1195,6 +1281,10 @@
   .text-\[22px\] {
     font-size: 22px;
   }
+  .leading-\[1\] {
+    --tw-leading: 1;
+    line-height: 1;
+  }
   .leading-\[13\.2px\] {
     --tw-leading: 13.2px;
     line-height: 13.2px;
@@ -1211,6 +1301,10 @@
     --tw-leading: 19.1px;
     line-height: 19.1px;
   }
+  .leading-\[19\.2px\] {
+    --tw-leading: 19.2px;
+    line-height: 19.2px;
+  }
   .leading-\[20\.4px\] {
     --tw-leading: 20.4px;
     line-height: 20.4px;
@@ -1218,6 +1312,10 @@
   .leading-\[21\.6px\] {
     --tw-leading: 21.6px;
     line-height: 21.6px;
+  }
+  .leading-\[21px\] {
+    --tw-leading: 21px;
+    line-height: 21px;
   }
   .leading-\[24px\] {
     --tw-leading: 24px;
@@ -1246,6 +1344,9 @@
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
+  }
+  .text-\[\#36C7B6\] {
+    color: #36C7B6;
   }
   .text-\[\#111111\] {
     color: #111111;
