--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -734,6 +734,9 @@
   .h-\[34px\] {
     height: 34px;
   }
+  .h-\[63px\] {
+    height: 63px;
+  }
   .h-\[100px\] {
     height: 100px;
   }
@@ -745,6 +748,9 @@
   }
   .h-\[600px\] {
     height: 600px;
+  }
+  .h-fit {
+    height: fit-content;
   }
   .h-full {
     height: 100%;
@@ -763,6 +769,9 @@
   }
   .w-1\/3 {
     width: calc(1/3 * 100%);
+  }
+  .w-1\/4 {
+    width: calc(1/4 * 100%);
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
@@ -790,6 +799,9 @@
   }
   .w-\[22px\] {
     width: 22px;
+  }
+  .w-\[30px\] {
+    width: 30px;
   }
   .w-\[32\%\] {
     width: 32%;
@@ -827,6 +839,9 @@
   .w-\[126px\] {
     width: 126px;
   }
+  .w-\[179px\] {
+    width: 179px;
+  }
   .w-\[247px\] {
     width: 247px;
   }
@@ -839,11 +854,17 @@
   .w-full {
     width: 100%;
   }
+  .w-px {
+    width: 1px;
+  }
   .max-w-\[135px\] {
     max-width: 135px;
   }
   .max-w-\[150px\] {
     max-width: 150px;
+  }
+  .max-w-\[154px\] {
+    max-width: 154px;
   }
   .max-w-\[155px\] {
     max-width: 155px;
@@ -1037,11 +1058,17 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-x-hidden {
+    overflow-x: hidden;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
   .rounded-\[3px\] {
     border-radius: 3px;
+  }
+  .rounded-\[4px\] {
+    border-radius: 4px;
   }
   .rounded-\[8px\] {
     border-radius: 8px;
@@ -1070,6 +1097,14 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
+  .rounded-l-\[9px\] {
+    border-top-left-radius: 9px;
+    border-bottom-left-radius: 9px;
+  }
+  .rounded-r-\[9px\] {
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -1096,6 +1131,9 @@
   .bg-\[\#007EC22B\] {
     background-color: #007EC22B;
   }
+  .bg-\[\#007EC266\] {
+    background-color: #007EC266;
+  }
   .bg-\[\#8C8C8C\] {
     background-color: #8C8C8C;
   }
@@ -1111,8 +1149,14 @@
   .bg-\[\#909090\] {
     background-color: #909090;
   }
+  .bg-\[\#AFE9E2\] {
+    background-color: #AFE9E2;
+  }
   .bg-\[\#C1C1C1\] {
     background-color: #C1C1C1;
+  }
+  .bg-\[\#D7D7D7\] {
+    background-color: #D7D7D7;
   }
   .bg-\[\#DEDEDE\] {
     background-color: #DEDEDE;
@@ -1153,6 +1197,9 @@
     --tw-gradient-to: #E4F7F5;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -1192,6 +1239,9 @@
   .px-\[5\] {
     padding-inline: 5;
   }
+  .px-\[15px\] {
+    padding-inline: 15px;
+  }
   .px-\[26px\] {
     padding-inline: 26px;
   }
@@ -1227,6 +1277,15 @@
   }
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
+  }
+  .py-\[13psx\] {
+    padding-block: 13psx;
+  }
+  .py-\[13px\] {
+    padding-block: 13px;
+  }
+  .py-\[15px\] {
+    padding-block: 15px;
   }
   .py-\[22px\] {
     padding-block: 22px;
@@ -1281,6 +1340,9 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-\[10px\] {
+    font-size: 10px;
+  }
   .text-\[11px\] {
     font-size: 11px;
   }
@@ -1303,6 +1365,10 @@
     --tw-leading: 1;
     line-height: 1;
   }
+  .leading-\[12px\] {
+    --tw-leading: 12px;
+    line-height: 12px;
+  }
   .leading-\[13\.2px\] {
     --tw-leading: 13.2px;
     line-height: 13.2px;
@@ -1322,6 +1388,10 @@
   .leading-\[19\.2px\] {
     --tw-leading: 19.2px;
     line-height: 19.2px;
+  }
+  .leading-\[19\.6px\] {
+    --tw-leading: 19.6px;
+    line-height: 19.6px;
   }
   .leading-\[20\.4px\] {
     --tw-leading: 20.4px;
