--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -653,6 +653,12 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
+  .my-2\.5 {
+    margin-block: calc(var(--spacing) * 2.5);
+  }
   .my-\[60px\] {
     margin-block: 60px;
   }
@@ -670,6 +676,9 @@
   }
   .mt-3 {
     margin-top: calc(var(--spacing) * 3);
+  }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
   }
   .mt-\[2px\] {
     margin-top: 2px;
@@ -730,6 +739,9 @@
   }
   .h-\[22px\] {
     height: 22px;
+  }
+  .h-\[33px\] {
+    height: 33px;
   }
   .h-\[34px\] {
     height: 34px;
@@ -806,6 +818,9 @@
   .w-\[32\%\] {
     width: 32%;
   }
+  .w-\[33px\] {
+    width: 33px;
+  }
   .w-\[34px\] {
     width: 34px;
   }
@@ -839,6 +854,9 @@
   .w-\[126px\] {
     width: 126px;
   }
+  .w-\[161px\] {
+    width: 161px;
+  }
   .w-\[179px\] {
     width: 179px;
   }
@@ -871,6 +889,9 @@
   }
   .max-w-\[176px\] {
     max-width: 176px;
+  }
+  .max-w-\[215px\] {
+    max-width: 215px;
   }
   .max-w-\[290px\] {
     max-width: 290px;
@@ -1200,6 +1221,9 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -1376,6 +1400,10 @@
   .leading-\[15\.6px\] {
     --tw-leading: 15.6px;
     line-height: 15.6px;
+  }
+  .leading-\[18\.2px\] {
+    --tw-leading: 18.2px;
+    line-height: 18.2px;
   }
   .leading-\[18px\] {
     --tw-leading: 18px;
