--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -668,6 +668,9 @@
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
+  .mt-1\.5 {
+    margin-top: calc(var(--spacing) * 1.5);
+  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
@@ -679,6 +682,9 @@
   }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
   }
   .mt-\[2px\] {
     margin-top: 2px;
@@ -751,6 +757,9 @@
   }
   .h-\[100px\] {
     height: 100px;
+  }
+  .h-\[129px\] {
+    height: 129px;
   }
   .h-\[149px\] {
     height: 149px;
@@ -860,6 +869,9 @@
   .w-\[179px\] {
     width: 179px;
   }
+  .w-\[220px\] {
+    width: 220px;
+  }
   .w-\[247px\] {
     width: 247px;
   }
@@ -901,6 +913,9 @@
   }
   .max-w-\[1200px\] {
     max-width: 1200px;
+  }
+  .min-w-\[75px\] {
+    min-width: 75px;
   }
   .flex-shrink {
     flex-shrink: 1;
@@ -1030,6 +1045,9 @@
   }
   .gap-\[5px\] {
     gap: 5px;
+  }
+  .gap-\[18px\] {
+    gap: 18px;
   }
   .gap-\[23px\] {
     gap: 23px;
@@ -1161,17 +1179,26 @@
   .bg-\[\#9AE3DB45\] {
     background-color: #9AE3DB45;
   }
+  .bg-\[\#9D9D9D\] {
+    background-color: #9D9D9D;
+  }
   .bg-\[\#36C7B6\] {
     background-color: #36C7B6;
   }
   .bg-\[\#36C7B61A\] {
     background-color: #36C7B61A;
   }
+  .bg-\[\#36C7B666\] {
+    background-color: #36C7B666;
+  }
   .bg-\[\#909090\] {
     background-color: #909090;
   }
   .bg-\[\#AFE9E2\] {
     background-color: #AFE9E2;
+  }
+  .bg-\[\#B6BBF5\] {
+    background-color: #B6BBF5;
   }
   .bg-\[\#C1C1C1\] {
     background-color: #C1C1C1;
@@ -1193,6 +1220,9 @@
   }
   .bg-\[\#FF973C29\] {
     background-color: #FF973C29;
+  }
+  .bg-\[\#FF973C94\] {
+    background-color: #FF973C94;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -1221,17 +1251,26 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
+  .p-2\.5 {
+    padding: calc(var(--spacing) * 2.5);
+  }
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
   .p-9 {
     padding: calc(var(--spacing) * 9);
+  }
+  .p-\[18px\] {
+    padding: 18px;
   }
   .p-\[30px\] {
     padding: 30px;
@@ -1389,6 +1428,10 @@
     --tw-leading: 1;
     line-height: 1;
   }
+  .leading-\[2\] {
+    --tw-leading: 2;
+    line-height: 2;
+  }
   .leading-\[12px\] {
     --tw-leading: 12px;
     line-height: 12px;
@@ -1445,6 +1488,10 @@
     --tw-leading: 28.8px;
     line-height: 28.8px;
   }
+  .leading-\[28\] {
+    --tw-leading: 28;
+    line-height: 28;
+  }
   .leading-\[36px\] {
     --tw-leading: 36px;
     line-height: 36px;
@@ -1465,8 +1512,14 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-\[\#007EC2\] {
+    color: #007EC2;
+  }
   .text-\[\#36C7B6\] {
     color: #36C7B6;
+  }
+  .text-\[\#484B73\] {
+    color: #484B73;
   }
   .text-\[\#111111\] {
     color: #111111;
@@ -1479,6 +1532,9 @@
   }
   .text-\[\#FF1F1F\] {
     color: #FF1F1F;
+  }
+  .text-\[\#FF7700\] {
+    color: #FF7700;
   }
   .text-white {
     color: var(--color-white);
